feat(search box): Created search box that filters data

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <header class="header">
       <h2>Students</h2>
-      
+      <p class="searchText">Search:</p>
+      <input type="text" id="inputText">
     </header>
     
     <ul class="student-list">
